# xcodegraph

./: .gitignore  README.md  pyproject.toml
doc/: 00-overview.md  01-core-extraction.md  01-revised-plan.md  02-filelist-parser.md  03-storage-search.md  04-resolution-watcher.md  05-mcp-server.md  06-cli-test-release.md  filelist_compat.md  opentitan-results.md  py-codegraph-sv-feasibility.md  remaining-tasks.md  xcg-completion-audit.md
skill/: xcodegraph-sv-skill.md
tests/: conftest.py  test_extraction.py  test_filelist.py  test_formatter.py  test_hierarchy.py  test_idempotent.py  test_mcp.py  test_mcp_cli.py  test_qualified_calls.py  test_reindex.py  test_source_manager.py  test_summary.py  test_uvm.py
xcodegraph/: __init__.py  cli.py  mcp_server.py  models.py
xcodegraph/core/: _helpers.py  common_block.py  filelist.py  formatter.py  indexer.py  parser.py  resolver.py  schema.sql  source_manager.py  storage.py  summary.py  visitor.py
